@@ -3,9 +3,10 @@
 \title{Add Error Variances to Endogenous Variables}
 \description{ Add errors to endogenous variables for which no error is currently defined. }
 
-\usage{add.errors(model)}
+\usage{add.errors(model, add.exo=FALSE)}
 \arguments{
   \item{model}{A model in the form of a ram object generated by \code{\link{specify.model}}}
+  \item{add.exo}{Will error be added for exogenous variables.}
 }
 
 \details{Scans through a model and determines which variables are endogenous.  Error variances are then added to these variables, and a new ram object is returned. }
@@ -16,7 +17,7 @@
 	\code{\link{specify.model}}
 }
 
-\example(
+\examples{
 
 
 #------------------------- Kerchoff/Kenney path analysis ---------------------
@@ -67,3 +68,5 @@ model.kerch2<-add.errors(model.kerch2)
 ##compare the two models - they are the same
 model.kerch
 model.kerch2
+
+}
