@@ -4,14 +4,12 @@
 \description{Implements Shapiro-Wilk's test for multivariate normality for matrices and data frames}
 \usage{mnormtest(a.frame)}
 
-\argument{
+\arguments{
 	\item{a.frame}{A data frame containing only the data of interest}
 }
 
 \details{Provides an easy interface for assessing the multivariate normality of a single data frame using the Multivariate Shapiro-Wilk's test with \code{\link{mshapiro.test}}
 }
-
-\value{}
 
 \seealso{
 	\code{\link{mshapiro.test}}
