@@ -5,7 +5,7 @@
 \usage{sbDiff(sbobj.A, sbobj.B)}
 
 
-\argument{
+\arguments{
 	\item{sbobj.A}{An object generated by \code{\link{sbchisq}} from an \code{\link{sem}} object}
 	\item{sbobj.B}{An object generated by \code{\link{sbchisq}} from an \code{\link{sem}} object.  sbobj.B is either a nested subset of sbobj.A or vice-versa.}
 }
