@@ -1,3 +1,6 @@
+2009-05-12 JEB
+	- Multiple fixes to Rd files.
+	- Added rmsea power test by Joerg Evermann
 2008-09-02 JEB
 	- Error in delta_matrix fixed.  Delta matrix now largely squares with STATA output from Stas Kolenikov
 	- Added the Chi Square Difference test
